--- a/Assets/Animations/Animation Edit Mode Tests/Animation Edit Mode Tests.asmdef
+++ b/Assets/Animations/Animation Edit Mode Tests/Animation Edit Mode Tests.asmdef
@@ -1,9 +1,24 @@
 {
     "name": "AnimationEditModeTests",
-    "optionalUnityReferences": [
-        "TestAssemblies"
+    "rootNamespace": "",
+    "references": [
+        "UnityEngine.TestRunner",
+        "UnityEditor.TestRunner",
+        "AnimationScripts"
     ],
     "includePlatforms": [
         "Editor"
-    ]
+    ],
+    "excludePlatforms": [],
+    "allowUnsafeCode": false,
+    "overrideReferences": true,
+    "precompiledReferences": [
+        "nunit.framework.dll"
+    ],
+    "autoReferenced": false,
+    "defineConstraints": [
+        "UNITY_INCLUDE_TESTS"
+    ],
+    "versionDefines": [],
+    "noEngineReferences": false
 }
