--- a/Assets/Scripts/Scripts.asmdef
+++ b/Assets/Scripts/Scripts.asmdef
@@ -7,7 +7,11 @@
         "GUID:fde95f2978b9e414e8bcbd3df93bb6a6",
         "GUID:2047ab7874eb449d78c2b459017aa506",
         "GUID:58bed0e7c5306824586d7eda03609289",
-        "GUID:6055be8ebefd69e48b49212b09b47b2f"
+        "GUID:6055be8ebefd69e48b49212b09b47b2f",
+        "GUID:e720aa64e3f58fb4880566a322584340",
+        "GUID:627104647b9c04b4ebb8978a92ecac63",
+        "GUID:72872094b21c16e48b631b2224833d49",
+        "GUID:84c1e9b7ca5082a4abc99f2f212dfdd9"
     ],
     "includePlatforms": [],
     "excludePlatforms": [],
